--- a/Projects/Calculator/style.css
+++ b/Projects/Calculator/style.css
@@ -1,20 +1,23 @@
 #calculator{
     border: 2px solid black;
     border-radius: 5px;
+    width: 200px;
+
 }
+/* Input Button */
+#input{
+    margin: 10px;
+    width: 85%;
+    font-size: 25px;
+}
+/* Buttom Conatiner*/
 .buttonsContainer{
     display: flex;
-    width: 200px;
-    font-size: larger;
-}
-.nums{
-    width: 50px;
-    height: 40px;
     justify-content: center;
-    margin: 3px;
     flex-wrap: wrap;
 }
-.nums{
+.nums > button{
+    width: 45px;
     height: 50px;
-    width:150px;
+    margin: 3px;
 }
